Gradle update (#637)
* Update gradle and dokka

* fix issues after gradle and kotlin updates

* fix unit test

* update CHANGELOG

* Fix unit tests

* Fix lint

* Fix lint app

* Fix crash

---------

Co-authored-by: Ziyi Zhang <ziyiz@amazon.com>