@@ -2,11 +2,11 @@
  * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  * SPDX-License-Identifier: Apache-2.0
  */
+import org.jetbrains.dokka.gradle.DokkaTask
 
 apply from: rootProject.file('publishing.gradle')
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'jacoco'
 
@@ -23,8 +23,8 @@ ext.versionMinor = versionProperties.getProperty('versionMinor') as Integer
 ext.versionPatch = versionProperties.getProperty('versionPatch') as Integer
 
 android {
-    compileSdkVersion project.ext.chimeCompileSdkVersion
-    buildToolsVersion project.ext.chimeBuildToolsVersion
+    compileSdk project.ext.chimeCompileSdkVersion
+    buildToolsVersion = project.ext.chimeBuildToolsVersion
 
     defaultConfig {
         minSdkVersion project.ext.chimeMinSdkVersion
@@ -38,7 +38,7 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
-        freeCompilerArgs += ["-Xjvm-default=enable"]
+        freeCompilerArgs += ["-Xjvm-default=all"]
     }
 
     buildTypes {
@@ -60,6 +60,10 @@ android {
             jacoco {
                 includeNoLocationClasses = true
             }
+            jvmArgs(
+                    "--add-opens", "java.base/java.util=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+            )
         }
         // This causes system calls to return default (i.e. null or zero) values rather then
         // immediately throwing exceptions.  Without this, tests covering anything with significant OpenGLES or
@@ -73,24 +77,24 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    dokka {
-        outputFormat = 'html'
-        outputDirectory = "docs"
-
-        configuration {
-            includeNonPublic = false
-            skipDeprecated = true
-            skipEmptyPackages = true
-
-            perPackageOption {
-                prefix = "com.amazonaws.services.chime.sdk.meetings.internal"
-                suppress = true
-            }
-        }
-    }
-
     defaultConfig {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+}
+
+tasks.withType(DokkaTask.class) {
+    dokkaSourceSets.configureEach {
+        documentedVisibilities.set([
+                Visibility.PUBLIC,
+                Visibility.PROTECTED
+        ])
+        skipEmptyPackages.set(true)
+        skipDeprecated.set(true)
+
+        perPackageOption {
+            matchingRegex.set(".*internal.*")
+            suppress.set(true)
+        }
     }
 }
 
@@ -144,11 +148,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
     testImplementation 'junit:junit:4.12'
-    testImplementation "io.mockk:mockk:1.10.0"
+    testImplementation "io.mockk:mockk:1.13.12"
     // Android Test only
     androidTestImplementation 'androidx.test:core:1.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'io.mockk:mockk-android:1.10.0'
+    androidTestImplementation 'io.mockk:mockk-android:1.13.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.1.0'
 }
